--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,3 +38,9 @@ starlette==0.14.2
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.15.0
+alembic==1.14.1
+
+# Testing dependencies
+pytest>=6.2.4
+pytest-cov>=2.12.1
+pytest-asyncio>=0.15.1
